--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eideal-assignment",
+  "name": "ideal-assignment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,16 +11,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.23.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "datauri": "^3.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^4.4.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "morgan": "^1.9.1"
