--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
     "cloudinary": "^1.23.0",
-    "connect-flash": "^0.1.1",
+    "connect-flash-plus": "^0.2.1",
     "connect-mongo": "^3.2.0",
-    "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^4.4.1",
+    "indicative": "^7.4.4",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
