--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "helmet": "^4.4.1",
     "indicative": "^7.4.4",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
