feat: multiple file upload

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "NODE_ENV=production node index.js"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
